--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
-        "s-ichikawa/laravel-sendgrid-driver": "^2.1"
+        "s-ichikawa/laravel-sendgrid-driver": "^2.1",
+        "sendgrid/sendgrid": "^7.4"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
